...
                    android:text="New Artisan"
                    android:textAlignment="viewStart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/searchActionItemsField" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/artisan_recycler_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    app:layout_constraintEnd_toEndOf="parent"
...
